[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Player1.gd" type="Script" id=1]
[ext_resource path="res://Images/Player1.png" type="Texture" id=2]
[ext_resource path="res://Sounds/EatPellet.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/EatStrawberry.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=19]
radius = 24.0
height = 2.0

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 38 ) ],
"loop": true,
"name": "Down",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": true,
"name": "Lose",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ) ],
"loop": true,
"name": "Up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=27]
radius = 24.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=47]
radius = 24.0
height = 2.0

[node name="Player1" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 19 )

[node name="Animation" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 21 )
animation = "Up"
playing = true

[node name="Ingestion" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AreaShape" type="CollisionShape2D" parent="Ingestion"]
visible = false
shape = SubResource( 27 )

[node name="SoundPellet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="SoundStrawberry" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Leaver" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="AreaShape" type="CollisionShape2D" parent="Leaver"]
visible = false
shape = SubResource( 47 )

[node name="Rotating" type="Node2D" parent="."]

[node name="ShotPossition" type="Position2D" parent="Rotating"]
visible = false
position = Vector2( 0, -32 )
